--- a/packages/amplify-ui/package.json
+++ b/packages/amplify-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aws-amplify/ui",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "dist/aws-amplify-ui.js",
   "scripts": {
     "test": "webpack",
     "start": "webpack-dev-server",
