--- a/packages/aws-amplify-react-native/package.json
+++ b/packages/aws-amplify-react-native/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "aws-amplify": "^1.0.7-unstable.3",
     "axios": "^0.17.1",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "react-native-elements": "^0.19.1"
   },
   "peerDependencies": {
     "graphql": "0.13.0"
