--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -115,7 +115,7 @@ category_list:
     - category: SetupAndInstallation
       title: Setup & Installation
       excerpt: 
-      base_url: 'quick_start'
+      base_url: '/media/quick_start'
       subs:
         - title: Getting Started
           excerpt: get started excerpt
@@ -141,7 +141,7 @@ category_list:
     - category: Tutorials
       title: Tutorials
       excerpt: 
-      base_url: 'react_guide'
+      base_url: '/media/react_guide'
       subs:
         - title: React
           excerpt: #'A step-by-step tutorial for learning how to build a cloud-enabled React Web app with AWS Amplify.<br/><b>30 min to complete</b>'
@@ -275,7 +275,7 @@ category_list:
     - category: Toolchain
       title: Toolchain
       excerpt: Better developer experience when building and deploying your apps.
-      base_url: '/media/cli_guide'
+      base_url: '/media/hosting_guide'
       subs:
         - title: Hosting 
           excerpt: Deploy your Web app or static website for global CDN distribution with media streaming support.
