--- a/packages/aws-amplify-angular/package.json
+++ b/packages/aws-amplify-angular/package.json
@@ -33,9 +33,9 @@
     "@types/node": "^9.4.6",
     "@types/paho-mqtt": "^1.0.3",
     "@types/zen-observable": "^0.5.3",
+    "@aws-amplify/ui": "^1.x",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^4.0.1",
-    "aws-amplify": "^1.0.5",
     "babel-core": "^6.26.3",
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-env": "^1.7.0",
@@ -64,6 +64,9 @@
     "uglify-js": "^3.4.7",
     "zone": "^0.3.4",
     "zone.js": "^0.8.26"
+  },
+  "peerDependencies": {
+    "aws-amplify": "^1.x"
   },
   "dependencies": {
     "@types/lodash": "^4.14.106"
