--- a/packages/aws-amplify-react/package.json
+++ b/packages/aws-amplify-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-amplify-react",
-  "version": "1.0.7-unstable.23",
+  "version": "1.0.7-unstable.22",
   "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
   "main": "dist/index.js",
   "scripts": {
@@ -44,11 +44,14 @@
     "testURL": "http://localhost/",
     "coverageThreshold": {
       "global": {
-        "branches": 79,
-        "functions": 80,
-        "lines": 80,
-        "statements": 80
+        "branches": 70,
+        "functions": 75,
+        "lines": 75,
+        "statements": 75
       }
+    },
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "<rootDir>/__mocks__/styleMock.js"
     }
   },
   "dependencies": {
