update ci config and coverage script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ defaults: &defaults
       environment:
           ## this enables colors in the output
           TERM: xterm
+  parallelism: 4
 
 jobs:
   build:
