--- a/packages/interactions/package.json
+++ b/packages/interactions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/interactions",
-  "version": "1.0.6-unstable.1",
+  "version": "1.0.6",
   "description": "Interactions category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
