--- a/packages/pushnotification/package.json
+++ b/packages/pushnotification/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/pushnotification",
-  "version": "1.0.6-unstable.1",
+  "version": "1.0.6",
   "description": "Push notifications category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
