--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "cypress": "^3.0.1",
     "jest": "^22.4.3",
     "json-loader": "^0.5.7",
-    "lerna": "^2.4.0",
+    "lerna": "2.11.0",
     "pre-commit": "^1.2.2",
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.1",
