--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@types/jest": "^20.0.7",
     "@types/node": "^8.9.5",
+    "aws-sdk": "^2.307.0",
     "codecov": "^1.0.1",
     "compression-webpack-plugin": "^1.1.3",
     "cypress": "^3.0.1",
