--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@aws-amplify/cache": "^1.0.7",
     "@aws-amplify/core": "^1.0.7",
+    "dom-utils-amplify": "0.10.1",
     "aws-sdk": "2.198.0",
     "uuid": "^3.2.1"
   },
