updated circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,5 +147,6 @@ workflows:
               only:
                 - release
                 - master
+                - beta
           requires:
             - unit_test
