--- a/packages/interactions/package.json
+++ b/packages/interactions/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@aws-amplify/core": "^1.0.7",
-    "aws-sdk": "2.198.0"
+    "aws-sdk": "^2.312.0"
   },
   "jest": {
     "transform": {
