--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -54,6 +54,7 @@
     "@aws-amplify/core": "^1.0.10",
     "@aws-amplify/interactions": "^1.0.10",
     "@aws-amplify/pubsub": "^1.0.10",
-    "@aws-amplify/storage": "^1.0.10"
+    "@aws-amplify/storage": "^1.0.10",
+    "@aws-amplify/xr": "^0.1.0"
   }
 }
