add vue guide and stub xr guide. Minor get started updates

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -84,7 +84,7 @@ amplify:
             logo:
                 text: AWS Amplify is supported by Amazon Web Services
                 image: true
-            copyright: © 2017-2018 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+            copyright: © 2018-2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
         social_list:
             - network_name: gitter
               profile_url: 'https://gitter.im/AWS-Amplify/Lobby/'
@@ -143,24 +143,50 @@ category_list:
       excerpt: 
       base_url: '/media/react_guide'
       subs:
-        - title: React
+        - title: React & React Native
           excerpt: #'A step-by-step tutorial for learning how to build a cloud-enabled React Web app with AWS Amplify.<br/><b>30 min to complete</b>'
           url: '/media/react_guide'
           icon: '/images/icons/Misc/Present.svg'
-        - title: React Native
-          excerpt: #'A step-by-step tutorial for learning how to build a cloud-enabled mobile app with React Native and AWS Amplify.<br/><b>30 min to complete</b>'
-          url: '/media/react_native_guide' 
-          icon: '/images/icons/Misc/Present.svg'
-        - title: Angular
-          excerpt: #"Learn to build a cloud enabled 'Notes App' with Ionic 4 and AWS Amplify <br/><b>45 min to complete</b>"
-          url: '/media/angular_guide' 
-          icon: '/images/icons/Misc/Present.svg'
-        - title: Ionic
+        - title: Angular & Ionic
           excerpt: #"Learn to build a cloud enabled 'Notes App' with Ionic 4 and AWS Amplify <br/><b>45 min to complete</b>"
           url: '/media/ionic_guide' 
           icon: '/images/icons/Misc/Present.svg'
+        - title: Vue
+          excerpt: #"Learn to build a cloud enabled App with Vue.js and AWS Amplify <br/><b>45 min to complete</b>"
+          url: '/media/vue_guide' 
+          icon: '/images/icons/Misc/Present.svg'
+    - category: Toolchain
+      title: Toolchain
+      excerpt: Better developer experience when building and deploying your apps.
+      base_url: '/media/hosting_guide'
+      subs:
+        - title: Hosting 
+          excerpt: Deploy your Web app or static website for global CDN distribution with media streaming support.
+          cta: Read more
+          class: aws-icon-ps-60-network-nodes
+          url: '/media/hosting_guide'   
+          icon: '/images/icons/Misc/Tool.svg'
+          services:
+              - title: Amazon CloudFront
+                url: https://aws.amazon.com/cloudfront/
+        - title: VS Code Extension 
+          excerpt: Code snippets for AWS Amplify in Visual Studio Code.
+          cta: Read more
+          class: aws-icon-ps-60-network-nodes
+          url_external: 'https://marketplace.visualstudio.com/items?itemName=aws-amplify.aws-amplify-vscode'   
+          icon: '/images/icons/Misc/Present.svg'
+
+    - category: UserInterface
+      title: User Interface
+      excerpt: 
+      base_url: '/media/ui_guide'
+      subs:
+        - title: UI Components
+          excerpt: UI excerpt
+          url: '/media/ui_guide'
+          icon: '/images/icons/Misc/Present.svg'
     - category: Categories
-      title: Categories
+      title: API Guides
       excerpt: Add cloud features to your app quickly using our toolchain and declarative APIs.
       base_url: '/media/analytics_guide'
       subs:
@@ -241,6 +267,15 @@ category_list:
           services:
               - title: Amazon S3
                 url: https://aws.amazon.com/s3/
+        - title: XR 
+          excerpt: Build AR/VR enabled web applications.
+          cta: Read more
+          class: aws-icon-ps-60-file-box
+          url: '/media/xr_guide'   
+          icon: '/images/icons/Misc/Cloud.svg'
+          services:
+              - title: Amazon S3
+                url: https://aws.amazon.com/s3/
     - category: Utilities
       title: Utilities
       excerpt: Common programming utilities that you can use with your app.
@@ -271,37 +306,6 @@ category_list:
           cta: Read more
           url: '/media/service_workers_guide'   
           icon: '/images/icons/Misc/Gear.svg'   
-          
-    - category: Toolchain
-      title: Toolchain
-      excerpt: Better developer experience when building and deploying your apps.
-      base_url: '/media/hosting_guide'
-      subs:
-        - title: Hosting 
-          excerpt: Deploy your Web app or static website for global CDN distribution with media streaming support.
-          cta: Read more
-          class: aws-icon-ps-60-network-nodes
-          url: '/media/hosting_guide'   
-          icon: '/images/icons/Misc/Tool.svg'
-          services:
-              - title: Amazon CloudFront
-                url: https://aws.amazon.com/cloudfront/
-        - title: VS Code Extension 
-          excerpt: Code snippets for AWS Amplify in Visual Studio Code.
-          cta: Read more
-          class: aws-icon-ps-60-network-nodes
-          url_external: 'https://marketplace.visualstudio.com/items?itemName=aws-amplify.aws-amplify-vscode'   
-          icon: '/images/icons/Misc/Present.svg'
-
-    - category: UserInterface
-      title: User Interface
-      excerpt: 
-      base_url: '/media/ui_guide'
-      subs:
-        - title: UI Components
-          excerpt: UI excerpt
-          url: '/media/ui_guide'
-          icon: '/images/icons/Misc/Present.svg'
 
 defaults:
   -
