--- a/packages/pubsub/package.json
+++ b/packages/pubsub/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "tslint 'src/**/*.ts' && jest --coverage",
     "build-with-test": "npm run clean && npm test && tsc && webpack",
-    "build": "npm run clean && tsc && webpack",
+    "build": "npm run clean && tsc && cp -r src/vendor lib/vendor && webpack",
     "clean": "rimraf lib lib-esm dist",
     "format": "tsfmt --useTsfmt tsfmt.json -r src/**/*.ts",
     "lint": "tslint 'src/**/*.ts'"
@@ -51,9 +51,7 @@
   },
   "dependencies": {
     "@aws-amplify/core": "^1.0.10",
-    "@types/paho-mqtt": "^1.0.3",
     "@types/zen-observable": "^0.5.3",
-    "paho-mqtt": "^1.0.4",
     "uuid": "^3.2.1",
     "zen-observable": "^0.8.6"
   },
