--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/api",
-  "version": "1.0.12",
+  "version": "1.0.13-unstable.4",
   "description": "Api category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -50,7 +50,7 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/auth": "^1.2.1",
+    "@aws-amplify/auth": "^1.2.2-unstable.3",
     "@aws-amplify/cache": "^1.0.10",
     "@aws-amplify/core": "^1.0.10",
     "@types/zen-observable": "^0.5.3",
