--- a/packages/xr/package.json
+++ b/packages/xr/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@aws-amplify/auth",
-  "version": "1.2.2-unstable.4",
-  "description": "Auth category of aws-amplify",
+  "name": "@aws-amplify/xr",
+  "version": "0.1.0",
+  "description": "XR category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
   "typings": "./lib/index.d.ts",
@@ -12,6 +12,7 @@
     "test": "tslint 'src/**/*.ts' && jest --coverage",
     "build-with-test": "npm run clean && npm test && tsc && webpack",
     "build": "npm run clean && tsc && webpack",
+    "watch": "tsc --watch",
     "clean": "rimraf lib lib-esm dist",
     "format": "tsfmt --useTsfmt tsfmt.json -r src/**/*.ts",
     "lint": "tslint 'src/**/*.ts'"
@@ -50,10 +51,9 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/cache": "^1.0.10",
-    "@aws-amplify/core": "^1.0.10",
-    "amazon-cognito-auth-js": "^1.1.9",
-    "amazon-cognito-identity-js": "^2.0.28-unstable.3"
+    "@aws-amplify/core": "^1.0.7",
+    "@aws-amplify/api": "^1.0.10",
+    "aws-sdk": "2.198.0"
   },
   "jest": {
     "transform": {
