--- a/packages/xr/package.json
+++ b/packages/xr/package.json
@@ -51,9 +51,7 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/api": "^1.0.15-unstable.5",
-    "@aws-amplify/core": "^1.0.13-unstable.1",
-    "aws-sdk": "2.198.0"
+    "@aws-amplify/core": "^1.0.13-unstable.1"
   },
   "jest": {
     "transform": {
