--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/api",
-  "version": "1.0.16-unstable.4",
+  "version": "1.0.16",
   "description": "Api category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -50,9 +50,9 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/auth": "^1.2.5-unstable.4",
-    "@aws-amplify/cache": "^1.0.14-unstable.1",
-    "@aws-amplify/core": "^1.0.14-unstable.1",
+    "@aws-amplify/auth": "^1.2.5",
+    "@aws-amplify/cache": "^1.0.14",
+    "@aws-amplify/core": "^1.0.14",
     "@types/zen-observable": "^0.5.3",
     "axios": "^0.17.0",
     "graphql": "0.13.0",
