--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/auth",
-  "version": "1.2.5-unstable.4",
+  "version": "1.2.5",
   "description": "Auth category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -50,8 +50,8 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/cache": "^1.0.14-unstable.1",
-    "@aws-amplify/core": "^1.0.14-unstable.1",
+    "@aws-amplify/cache": "^1.0.14",
+    "@aws-amplify/core": "^1.0.14",
     "amazon-cognito-auth-js": "^1.1.9",
     "amazon-cognito-identity-js": "^2.0.31-unstable.2"
   },
