--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/storage",
-  "version": "1.0.14-unstable.1",
+  "version": "1.0.14",
   "description": "Storage category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -50,7 +50,7 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/core": "^1.0.14-unstable.1",
+    "@aws-amplify/core": "^1.0.14",
     "aws-sdk": "^2.312.0"
   },
   "jest": {
