--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -53,7 +53,7 @@
     "@aws-amplify/cache": "^1.0.14",
     "@aws-amplify/core": "^1.0.14",
     "amazon-cognito-auth-js": "^1.1.9",
-    "amazon-cognito-identity-js": "^2.0.31-unstable.2"
+    "amazon-cognito-identity-js": "^3.0.0"
   },
   "jest": {
     "transform": {
