--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -50,8 +50,7 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/core": "^1.0.16-unstable.3",
-    "aws-sdk": "^2.312.0"
+    "@aws-amplify/core": "^1.0.16-unstable.3"
   },
   "jest": {
     "transform": {
