--- a/packages/xr/package.json
+++ b/packages/xr/package.json
@@ -52,8 +52,7 @@
   },
   "dependencies": {
     "@aws-amplify/api": "^1.0.18-unstable.3",
-    "@aws-amplify/core": "^1.0.16-unstable.3",
-    "aws-sdk": "2.198.0"
+    "@aws-amplify/core": "^1.0.16-unstable.3"
   },
   "jest": {
     "transform": {
