--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -50,7 +50,8 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/core": "^1.0.16"
+    "@aws-amplify/core": "^1.0.16",
+    "firebase": "^5.5.8"
   },
   "jest": {
     "transform": {
