--- a/packages/aws-amplify-react-native/package.json
+++ b/packages/aws-amplify-react-native/package.json
@@ -22,8 +22,14 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-preset-es2015": "^6.24.1",
+    "buffer": "^5.2.1",
+    "expo": "^31.0.3",
+    "react-native-audio-toolkit": "^1.0.6",
     "react-native-elements": "^0.19.1",
-    "react-native-vector-icons": "^5.0.0"
+    "react-native-fs": "^2.12.1",
+    "react-native-sound": "^0.10.9",
+    "react-native-vector-icons": "^5.0.0",
+    "react-native-voice": "^0.2.6"
   },
   "peerDependencies": {
     "aws-amplify": "^1.x",
