--- a/packages/aws-amplify-react/package.json
+++ b/packages/aws-amplify-react/package.json
@@ -21,8 +21,10 @@
     "jest": "^22.x",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.0.0"
-  },
+    "react-test-renderer": "^16.0.0",
+    "@types/react": "^16.7.7",
+    "@types/react-dom": "^16.0.10"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aws/aws-amplify.git"
@@ -65,9 +67,6 @@
     }
   },
   "dependencies": {
-    "@aws-amplify/ui": "^1.0.9",
-    "@types/react": "^16.7.6",
-    "@types/react-dom": "^16.0.9",
     "qrcode.react": "^0.8.0",
     "regenerator-runtime": "^0.11.1"
   },
