--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/storage",
-  "version": "1.0.20-unstable.0",
+  "version": "2.0.0",
   "description": "Storage category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -50,6 +50,7 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
+    "@aws-amplify/cache": "^1.0.18",
     "@aws-amplify/core": "^1.0.19-unstable.0"
   },
   "jest": {
